# agentic-bbo

./: .dockerignore  .gitignore  Dockerfile.benchmark  README.md  README.zh.md  docker-compose.task-services.yml  pyproject.toml  run.sh
bbo/: __init__.py  run.py
bbo/algorithms/: __init__.py  registry.py
bbo/algorithms/agentic/: __init__.py  general_agent.py  general_agent_engines.py  gp_expected_improvement_example.py  nanobot_runner.py  sandbox_healthcheck.py  workspace_python_api.py  workspace_tool_cli.py
bbo/algorithms/llm_based/: skydiscover_interleaved.py
bbo/algorithms/model_based/: __init__.py  pfns4bo_encoding.py  pfns4bo_training.py  pfns4bo_utils.py  pfns4bo_variants.py
bbo/core/: __init__.py  experimenter.py  manifest.py  task.py
bbo/task_descriptions/: README.md  README.zh.md
bbo/tasks/: http_json.py  registry.py
docs/: SETUP_RUN_ALL_BATCH.md  dockerhub_benchmark_env.md  dockerhub_benchmark_env.zh.md  knob_experiments.md  run_all_registered_tasks.md  sandboxfusion_bbo.md  search_r1_web_search.md  serpapi_web_search.md
examples/: print_skydiscover_run_strategies.py  run_all_registered_tasks.py  run_bboplace_demo.py  run_database_http_eval_demo.py  run_knob_surrogate_demo.py  run_pfns4bo_tabpfn_v2_demo.py  run_skydiscover_interleaved_demo.py  run_skydiscover_interleaved_openai_demo.py  train_pfns4bo_custom_model.py
examples/skydiscover_configs/: adaevolve_bbo.yaml  bbo_interleaved_system_prompt.txt  evox_bbo.yaml  gepa_bbo.yaml  gepa_native_bbo.yaml  openevolve_bbo.yaml  openevolve_native_bbo.yaml
scripts/: install_dockerhub_benchmark_env.sh  run_mariadb_baselines.sh  run_problem.sh  start_mariadb_eval.sh
tests/: test_bbo_tools.py  test_bboplace_local_service.py  test_bboplace_task.py  test_budgeted_sphere_task.py  test_description.py  test_experimenter.py  test_general_agent.py  test_http_surrogate_map.py  test_llambo.py  test_meta_evaluator.py  test_opro.py  test_pfns4bo_variants.py  test_run_cli_smoke.py  test_sandbox_healthcheck.py  test_scientific_tasks.py  test_skydiscover_interleaved.py  test_surrogate_knob_space.py  test_surrogate_task_smoke.py  test_task_family_labels.py
(+129 files in other folders)
